2022-10-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Refactor a litle to avoid code duplication
	and try to ensure that the connection is mared 'idle' as soon as we
	have finished I/O (so its URL can be changed).

2022-10-20 Richard Frith-Macdonald <rfm@gnu.org>

	* Resources/GSTLS/README:
	* Source/GSTLS.m:
	Honor the SSL_CERT_FILE environment variable (for OpenSSL
	compatibility) if our own user default or environment variable
	is not used.

2022-10-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Track whether we have read any data from
	the server.  If a connection is closed by the server while it is being
	kept alive (ie we are not on first request) and no response data has
	been read for a request we sent, we assume it was an intentional close
	and try to establish a new connection to retry the request.
	This is more tolerant of latency in the network (which could mean that
	our test tthat the connection is still alive before sending a request
	could be wrong) and also deals with perverse server implementations
	which drop long standing connections when the server receives a
	request rather than when a timeout occurred.

2022-09-15 Hugo Melder <contact@hugomelder.com>

        * config/config.constant-string-class.m:
        * Tests/base/NSObject/initialize.m:
        * Tests/base/NSTask/launch.m:
        C99 does not support implicit function declarations. Add string.h
        and unistd.h when applicable.

2022-08-23 Hugo Melder <contact@hugomelder.com>

	* Tests/base/NSURL/basic.m:
	Fix URL description and resource specifier test value on win32.
	* Tests/base/NSURL/test00.m:
	* Tests/base/NSURL/test01.m:
	* Tests/base/NSURL/test02.m:
	* Tests/base/NSURLConnection/test01.m:
	* Tests/base/NSURLConnection/test02.m:
	* Tests/base/NSURLConnection/test03.m:
	* Tests/base/NSURLConnection/test04.m:
	* Tests/base/NSURLConnection/test05.m:
	* Tests/base/NSURLConnection/test06.m:
	* Tests/base/NSURLConnection/test07.m: